2007-09-08  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-buildpackage.sh: Use fakeroot, if present, as default
	value for the '-r' option.

2007-09-06  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-genchanges.pl: Stop recognizing the obsolete Optional
	field.
	* scripts/dpkg-gencontrol.pl: Likewise.
	* scripts/dpkg-source.pl: Likewise.

2007-09-06  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-name.sh: Avoid escaped quotes messing with syntax
	highlighting by using $() instead of backticks.
	* scripts/dpkg-buildpackage.sh: Likewise.

2007-09-06  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-genchanges.pl ($host_arch): Do not declare as 'our'.
	* scripts/dpkg-gencontrol.pl ($host_arch): Likewise.

2007-09-06  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-genchanges.pl (%fieldimps): Remove unused variable.
	* scripts/dpkg-gencontrol.pl (%fieldimps): Likewise.
	* scripts/dpkg-source.pl (%fieldimps): Likewise.
	* scripts/controllib.pl (%fieldimps): Switch from 'our' to 'my'.

2007-09-06  Guillem Jover  <guillem@debian.org>

	* scripts/822-date.pl: Add $dpkglib into @INC, needed by the
	controllib.pl require.

2007-09-06  Guillem Jover  <guillem@debian.org>

	* configure.ac: Bump version to 1.14.7~.

2007-09-05  Guillem Jover  <guillem@debian.org>

	* configure.ac: Release 1.14.6.

2007-09-05  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-gencontrol.pl: Properly override Homepage field from
	binary package stanzas.

2007-08-31  Guillem Jover  <guillem@debian.org>

	* dpkg-deb/build.c (arbitrary_fields): Add Tag.
	* scripts/dpkg-genchanges.pl: Ignore Tag field.
	* scripts/dpkg-gencontrol.pl: Parse Tag from binary package stanza.
	(@control_fields): Add Tag.
	* scripts/dpkg-scanpackages.pl (@fieldpri): Add Tag.
	* scripts/dpkg-source.pl: Ignore Tag field from binary package stanza.

2007-08-31  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-genchanges.pl: Ignore Vcs-Browser, Vcs-Arch, Vcs-Bzr,