@@ -1,3 +1,10 @@
+2007-09-14  Brian M. Carlson  <sandals@crustytoothpaste.ath.cx>
+
+	* src/remove.c (deferred_remove): Store the previous package status
+	when calling '<prerm> remove' and pass it to push_cleanup.
+	* src/cleanup.c (cu_prermremove): Restore previous stored status if
+	the '<postinst> abort-remove' call succeeds.
+
 2007-09-08  Guillem Jover  <guillem@debian.org>
 
 	* scripts/dpkg-buildpackage.sh: Use fakeroot, if present, as default
